# MC-Assignment-3-NDK

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/imageclassification/: MainActivity.kt
app/src/main/ml/: model.tflite
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
